--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       uses: lakuapik/gh-actions-http-status@v1
       with:
         # List website urls in JSON (eg: ["http://github.com", "https://education.github.com"])
-        sites: "http://localhost:8081/health"
+        sites: "http://localhost:8081/heaasdflth"
         # List expected HTTP status codes in JSON (eg: [301, 200])
         expected: 200
       
