--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
         echo "::set-output name=packageJson::$content"
         
     - run: |
-        echo "${{fromJson(steps.set_var.outputs.packageJson).HealthStatus}}"
+        echo "${{fromJson(steps.probe_info.outputs.packageJson).HealthStatus}}"
