--- a/.github/workflows/docker-integration-test.yml
+++ b/.github/workflows/docker-integration-test.yml
@@ -21,6 +21,11 @@ jobs:
     - name: Install newman
       run: |
         npm install -g newman
+        
+    - name: Start Db 
+      run: |
+         docker run -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=yourStrong(!)Password" -p 1433:1433 -d mcr.microsoft.com/mssql/serv
+er:2022-latest
 
     - name: Build Docker image
       run: docker build --tag minimal-api --file ./MinimalApi/Dockerfile .
