--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -15,4 +15,8 @@
       <Folder Include="Common\Interfaces\Adapters" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
