--- a/.github/workflows/docker-integration-test.yml
+++ b/.github/workflows/docker-integration-test.yml
@@ -33,6 +33,11 @@ jobs:
 
     - name: Run Docker Compose
       run: docker compose up -d
+      
+    - name: Sleep to wait
+      uses: kibertoad/wait-action@1.0.1
+      with:
+        time: 10s
 
     - name: Test
       run: |
