--- a/.github/workflows/docker-integration-test.yml
+++ b/.github/workflows/docker-integration-test.yml
@@ -34,10 +34,10 @@ jobs:
     - name: Run Docker Compose
       run: docker compose up -d
       
-    #- name: Sleep to wait
-    #  uses: kibertoad/wait-action@1.0.1
-    #  with:
-    #    time: 3s
+    - name: Sleep to wait
+      uses: kibertoad/wait-action@1.0.1
+      with:
+        time: 3s
 
     - name: Test
       run: |
