--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,13 @@ services:
       - "8081:443"
     links:
       - db:1433
+    restart: unless-stopped
+    healthcheck:
+      test: curl --fail http://localhost/health || exit 1
+      interval: 60s
+      retries: 5
+      start_period: 20s
+      timeout: 10s
   db:
     environment:
       ACCEPT_EULA: "Y"
