Add Repository.cs tests

--- a/.github/workflows/docker-integration-test.yml
+++ b/.github/workflows/docker-integration-test.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Run Docker Compose
       run: docker compose up -d
       
-    - name: Sleep to wait
+    - name: Wait for startup
       uses: kibertoad/wait-action@1.0.1
       with:
         time: 10s
