Feature/setup initial ef (#21)
* Initial setup of ef and test

* Add DbContext health check

* Update docker-integration-test.yml

Add startup of db container

* Update docker-integration-test.yml

Fix long line

* Update docker-integration-test.yml

* Initial docker compose setup

* Initial setup of ef migration

* Update docker integration test

* Setup docker compose

* Remove port

* Update port test

* Update docker-integration-test.yml

* Add protocal

* Add tests

* Update timeout

* Remove strict SSL postman test

* Remove wait

* Update port

* Add content length

* Add sleep

* Add web health check docker and longer sleep

* Remove contentl enth

* Add Repository.cs tests

* Inject unit of work

* Coverage ignore AppDbContextInitializer

--- a/.github/workflows/docker-integration-test.yml
+++ b/.github/workflows/docker-integration-test.yml
@@ -22,12 +22,23 @@ jobs:
       run: |
         npm install -g newman
 
-    - name: Build Docker image
-      run: docker build --tag minimal-api --file ./MinimalApi/Dockerfile .
+    #- name: Run Db Docker image
+    #  run: docker run -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=yourStrong(!)Password" -p 1433:1433 -d mcr.microsoft.com/mssql/server:2022-latest
 
-    - name: Run Docker image
-      run: docker run --name minimal-api-container -p 8081:80 -p 8082:443 -d minimal-api
+    #- name: Build API Docker image
+    #  run: docker build --tag minimal-api --file ./MinimalApi/Dockerfile .
+
+    #- name: Run API Docker image
+    #  run: docker run --name minimal-api-container -p 8081:80 -p 8082:443 -d minimal-api
+
+    - name: Run Docker Compose
+      run: docker compose up -d
+      
+    - name: Wait for startup
+      uses: kibertoad/wait-action@1.0.1
+      with:
+        time: 10s
 
     - name: Test
       run: |
-        newman run ./Tests/health_probe_tests.json -r cli
+        newman run ./Tests/Newman/health_probe_tests.json -r cli --verbose --insecure
