--- a/.github/workflows/sonar-workflow.yml
+++ b/.github/workflows/sonar-workflow.yml
@@ -57,5 +57,5 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"mekkl_dotnet-starter-template" /o:"c8f2e925-eef3-4fc5-9cb5-d7748e0f9faf" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.opencover.reportsPaths=coverage.xml
           dotnet build
           dotnet test --collect:"XPlat Code Coverage" --settings Tests/coverlet.runsettings
-          mv ./Tests/TestResults/*/coverage.cobertura.xml ./coverage.xml
+          mv ./Tests/TestResults/*/coverage.opencover.xml ./coverage.xml
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
