Initial jwt implementation

--- a/MinimalApi/appsettings.json
+++ b/MinimalApi/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=db,1433; Persist Security Info=True;User ID=SA;Password=yourStrong(!)Password; TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Secret": "!#verySecureSecret123",
+    "Issuer": "minimalApi",
+    "Audience": "minimalApiClient"
+  },
   "UseInMemoryDatabase": false
 }
