--- a/MinimalApi/appsettings.Development.json
+++ b/MinimalApi/appsettings.Development.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost,1433; Persist Security Info=True;User ID=SA;Password=yourStrong(!)Password; TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Secret": "!#verySecureSecret123",
+    "Issuer": "minimalApi",
+    "Audience": "minimalApiClient"
+  },
   "UseInMemoryDatabase": false
 }
