--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -39,4 +39,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Application\Auth\Commands" />
+    </ItemGroup>
+
 </Project>
