--- a/MinimalApi/appsettings.json
+++ b/MinimalApi/appsettings.json
@@ -14,5 +14,13 @@
     "Issuer": "minimalApi",
     "Audience": "minimalApiClient"
   },
-  "UseInMemoryDatabase": false
+  "UseInMemoryDatabase": false,
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Main",
+        "Uri": "http://localhost:5021/health"
+      }
+    ]
+  }
 }
